# glob-cpp

./: .gitignore  CMakeLists.txt  README.md  grammar.ebnf
cmake/: googletest.cmake
examples/: CMakeLists.txt  cglob.cpp  cglob.h  file-glob-example.cc  glob-cli.cc  string-match-cli.cc  string-match-example.cc  wglob-cli.cc
examples/glob.xcodeproj/: project.pbxproj
examples/glob.xcodeproj/xcshareddata/xcschemes/: glob.xcscheme  wglob.xcscheme
include/: file-glob.h  glob.h  token.def
include/glob-cpp/: file-glob.h  glob.h  token.def
src/: file-glob.h  glob.h  main.cc  token.def  traversal.h
tests/: CMakeLists.txt  file-glob-test.cc  glob-shell-test.sh  glob-str-test.cc  glob-test.sh  traversal.h
